--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
+    <!-- Font Awesome CSS File -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
   </head>
@@ -314,7 +317,7 @@
             >
               <h3>About Us</h3>
               <p>
-                At Jazzy Venture, we believe that style and functionality go hand-in-hand. Founded with a vision to enhance your everyday look, we are dedicated to offering premium eyewear, stylish watches, chic purses and bags that not only complement your style but also elevate your confidence.
+                At Jazzy Venture, we believe that style and functionality go hand-in-hand. Founded with a vision to enhance your everyday look, we are dedicated to offering premium eyewear, stylish watches, chic purses and perfumes that not only complement your style but also elevate your confidence.
               </p>
               <h4>
                 Our Mission
@@ -360,12 +363,12 @@
                 <!-- Icon-Box -->
 
                 <div class="col-md-6 icon-box position-relative">
-                  <i class="bi bi-backpack"></i>
+                  <i class="fa-solid fa-spray-can-sparkles"></i>
                   <h4>
-                    <a href="" class="stretched-link">Bags</a>
+                    <a href="" class="stretched-link">Perfumes</a>
                   </h4>
                   <p>
-                    Elevate your style with our versatile range of bags. From everyday totes to stylish backpacks, our collection includes high-quality bags from brands like Gucci, Prada, Louis Vuitton, Michael Kors, Coach, and Tumi. Designed for both practicality and aesthetics, our bags are the perfect companions for your daily adventures or sophisticated travel needs.
+                    Indulge in our exquisite collection of perfumes that capture the essence of luxury and sophistication. Featuring scents from top brands such as Chanel, Dior, Gucci, Tom Ford, Prada, and Versace, our perfumes are crafted to leave a lasting impression. Whether you prefer a fresh, floral fragrance or a bold, spicy scent, our curated selection ensures you find the perfect perfume to complement your style and mood.
                   </p>
                 </div>
                 <!-- Icon-Box -->
@@ -792,7 +795,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Products</h2>
           <p>
-            Discover a curated selection of premium accessories designed to elevate your style and enhance your everyday look. From high-quality eyeglasses and elegant watches to fashionable purses and versatile bags, our collection features renowned brands and exquisite craftsmanship.
+            Discover a curated selection of premium accessories designed to elevate your style and enhance your everyday look. From high-quality eyeglasses and elegant watches to fashionable purses and perfumes, our collection features renowned brands and exquisite craftsmanship.
           </p>
         </div>
         <!-- End Section Title -->
@@ -813,7 +816,7 @@
               <li data-filter=".filter-glasses">Glasses</li>
               <li data-filter=".filter-watches">Watches</li>
               <li data-filter=".filter-purses">Purses</li>
-              <li data-filter=".filter-bags">Bags</li>
+              <li data-filter=".filter-perfumes">Perfumes</li>
             </ul>
             <!-- End Product Filters -->
 
@@ -874,7 +877,7 @@
                   <h3>What products do you offer?</h3>
                   <div class="faq-content">
                     <p>
-                      We offer a wide range of eyeglasses, watches, purses, and bags. Our products include items from top brands like Gucci, Prada, Rolex, Louis Vuitton, and many more.
+                      We offer a wide range of eyeglasses, watches, purses, and perfumes. Our products include items from top brands like Gucci, Prada, Rolex, Louis Vuitton, and many more.
                     </p>
                   </div>
                   <i class="faq-toggle bi bi-chevron-right"></i>
