fade animation delay update

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h2 data-aos="fade-up" data-aos-delay="100">
+              <h2 data-aos="fade-up" data-aos-delay="200">
                 Discover Your Perfect Look with Jazzy Venture
               </h2>
-              <p data-aos="fade-up" data-aos-delay="200">
+              <p data-aos="fade-up" data-aos-delay="400">
                 Explore our range of eyewear, watches, and purses tailored for
                 you.
               </p>
@@ -144,7 +144,7 @@
 
       <!-- Clients Section -->
       <section id="clients" class="clients section">
-        <div class="container" data-aos="fade-up" data-aos-delay="50">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper">
             <script type="application/json" class="swiper-config">
               {
@@ -313,7 +313,7 @@
             <div
               class="content col-lg-12 d-flex flex-column"
               data-aos="fade-up"
-              data-aos-delay="50"
+              data-aos-delay="100"
             >
               <h3>About Us</h3>
               <p>
@@ -396,7 +396,7 @@
           <ul
             class="nav nav-tabs row d-flex"
             data-aos="fade-up"
-            data-aos-delay="50"
+            data-aos-delay="100"
           >
             <li class="nav-item col-3">
               <a
@@ -441,7 +441,7 @@
           </ul>
           <!-- End Tab Nav -->
 
-          <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
+          <div class="tab-content" data-aos="fade-up" data-aos-delay="400">
             <div class="tab-pane fade active show" id="tabs-tab-1">
               <div class="row">
                 <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
@@ -689,7 +689,7 @@
 
         <div class="container">
           <div class="row gy-4">
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item d-flex position-relative h-100">
                 <i class="bi bi-briefcase icon flex-shrink-0"></i>
                 <div>
@@ -705,7 +705,7 @@
             </div>
             <!-- End Service Item -->
 
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
               <div class="service-item d-flex position-relative h-100">
                 <i class="bi bi-card-checklist icon flex-shrink-0"></i>
                 <div>
@@ -721,7 +721,7 @@
             </div>
             <!-- End Service Item -->
 
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="150">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item d-flex position-relative h-100">
                 <i class="bi bi-bar-chart icon flex-shrink-0"></i>
                 <div>
@@ -737,7 +737,7 @@
             </div>
             <!-- End Service Item -->
 
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
               <div class="service-item d-flex position-relative h-100">
                 <i class="bi bi-binoculars icon flex-shrink-0"></i>
                 <div>
@@ -753,7 +753,7 @@
             </div>
             <!-- End Service Item -->
 
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="250">
+            <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
               <div class="service-item d-flex position-relative h-100">
                 <i class="bi bi-brightness-high icon flex-shrink-0"></i>
                 <div>
@@ -810,7 +810,7 @@
             <ul
               class="product-filters isotope-filters"
               data-aos="fade-up"
-              data-aos-delay="50"
+              data-aos-delay="100"
             >
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-glasses">Glasses</li>
@@ -823,7 +823,7 @@
             <!-- <div
               class="row gy-4 isotope-container"
               data-aos="fade-up"
-              data-aos-delay="100"
+              data-aos-delay="200"
             >
               <div
                 class="col-lg-4 col-md-6 product-item isotope-item filter-app"
@@ -871,7 +871,7 @@
 
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-lg-10" data-aos="fade-up" data-aos-delay="50">
+            <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
               <div class="faq-container">
                 <div class="faq-item faq-active">
                   <h3>What products do you offer?</h3>
@@ -969,7 +969,7 @@
             <div
               class="col-lg-3 col-md-9 d-flex align-items-stretch"
               data-aos="fade-up"
-              data-aos-delay="50"
+              data-aos-delay="100"
             >
               <div class="team-member">
                 <div class="member-img">
@@ -1009,7 +1009,7 @@
             <div
               class="col-lg-3 col-md-9 d-flex align-items-stretch"
               data-aos="fade-up"
-              data-aos-delay="100"
+              data-aos-delay="200"
             >
               <div class="team-member">
                 <div class="member-img">
@@ -1069,7 +1069,7 @@
         </div>
         <!-- End Google Maps -->
 
-        <div class="container" data-aos="fade-up" data-aos-delay="50">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4">
             <div class="col-lg-6">
               <div class="row gy-4">
@@ -1077,7 +1077,7 @@
                   <div
                     class="info-item d-flex flex-column justify-content-center align-items-center"
                     data-aos="fade-up"
-                    data-aos-delay="100"
+                    data-aos-delay="200"
                   >
                     <i class="bi bi-geo-alt"></i>
                     <h3>Address</h3>
@@ -1090,7 +1090,7 @@
                   <div
                     class="info-item d-flex flex-column justify-content-center align-items-center"
                     data-aos="fade-up"
-                    data-aos-delay="150"
+                    data-aos-delay="300"
                   >
                     <i class="bi bi-telephone"></i>
                     <h3>Call Us</h3>
@@ -1103,7 +1103,7 @@
                   <div
                     class="info-item d-flex flex-column justify-content-center align-items-center"
                     data-aos="fade-up"
-                    data-aos-delay="200"
+                    data-aos-delay="400"
                   >
                     <i class="bi bi-envelope"></i>
                     <h3>Email Us</h3>
@@ -1120,7 +1120,7 @@
                 role="form"
                 class="php-email-form"
                 data-aos="fade-up"
-                data-aos-delay="250"
+                data-aos-delay="500"
               >
                 <div class="row gy-4">
                   <div class="col-md-6">
@@ -1290,6 +1290,18 @@
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
+
+    <script>
+      AOS.init({
+        offset: 120, // offset (in px) from the original trigger point
+        delay: 0, // values from 0 to 3000, with step 50ms
+        duration: 600, // values from 0 to 3000, with step 50ms
+        easing: 'ease', // default easing for AOS animations
+        once: true, // whether animation should happen only once - while scrolling down
+        mirror: false, // whether elements should animate out while scrolling past them
+        anchorPlacement: 'top-bottom', // defines which position of the element regarding to window should trigger the animation
+      });
+    </script>    
 
     <script>
       function handleFormSubmit(form) {
